--- a/src/template.html
+++ b/src/template.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rasa</title>
+    <title>Document</title>
 </head>
-
 <body>
-    <header  class="side-nav">
-        <nav>
-            <button id="home-button">Home</button>
-            <button id="menu-button">Menu</button>
-            <button id="reservation-button">Reservation</button>
-        </nav>
-    </header>
-    <div id="content">
-    </div>
+    
 </body>
-
 </html>
